# bevy_ratatui_camera

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: checks.yml
examples/: 2d_camera.rs  3d_camera.rs  color_ranges.rs  color_support.rs  depth.rs  dynamic_config.rs  edge_detection.rs  luminance.rs  masking.rs  multiple.rs  orthographic.rs  subcamera.rs  text_labels.rs  transparency.rs  world_space.rs
examples/shared/: mod.rs
src/: camera.rs  camera_edge_detection.rs  camera_image_pipe.rs  camera_node.rs  camera_node_sobel.rs  camera_readback.rs  camera_strategy.rs  color_range.rs  color_support.rs  lib.rs  plugin.rs  widget.rs  widget_depth_buffer.rs  widget_halfblocks.rs  widget_luminance.rs  widget_math.rs  widget_none.rs  widget_strategy_depth.rs  widget_strategy_halfblocks.rs  widget_strategy_luminance.rs  widget_strategy_none.rs  widget_utilities.rs
src/shaders/: sobel.wgsl
