[package]
name = "bevy_ratatui_camera"
description = "A bevy plugin for rendering your bevy app to the terminal using ratatui."
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxreiff/bevy_ratatui_camera"
documentation = "https://docs.rs/bevy_ratatui_camera"
authors = ["cxreiff <cooper@cxreiff.com>"]
categories = ["game-engines", "gui", "rendering", "command-line-interface"]
keywords = ["bevy", "ratatui", "terminal", "tui", "render"]

[dependencies]
bevy = "0.15.3"
crossterm = "0.28.0"
crossbeam-channel = "0.5.13"
ratatui = "0.29.0"
ratatui-image = "5.0.0"
bevy_ratatui = "0.7.1"
image = "0.25.5"
bevy_mod_debugdump = "0.12.0"
log = "0.4.22"

[dev-dependencies]
tui-logger = "0.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
